--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "full ecommerce site using mern",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=PRODUCTION & node server.js",
+    "start": "node server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/server",
-    "seeder": "node backend/utils/seeder.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
+    "seeder": "node backend/utils/seeder.js"
   },
   "author": "Rajat",
   "license": "ISC",
